# Secure_File_Destroyer

./: .gitignore  CMakeLists.txt  Readme.md
src/: main.cpp  picosha2.hpp
